@@ -1,5 +1,5 @@
 MD5 4581c058b2f07556d3fdb9a213014044 browser-config-1.0.ebuild 666
-MD5 86e8b2b90d6cc6da34a306a5f8721bef ChangeLog 488
-MD5 fd55c3495996ae62e4bf3e293b6f8f4f browser-config-1.1.ebuild 666
+MD5 e152c17f7e22efb33a320e8cd4a30ece ChangeLog 581
+MD5 d04ed6bea47846762936fc918444e30c browser-config-1.1.ebuild 1067
 MD5 14e7b15b23fe359fa1dded672c66e510 files/digest-browser-config-1.0 69
 MD5 5641217d4d94086694f1ae2e6e2a56a5 files/digest-browser-config-1.1 69
